--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,21 +1,29 @@
-<h1>
-  WebSockets
-</h1>
-<br>
-<div>
-  <div class="column">
-    <textarea [(ngModel)]="content" name="contentInput" cols="40" rows="5"></textarea>
-    <br>
-    <button (click)="sendMsg()">Send Message</button>
+<div class="grid  gap-2 w-2/5 mx-auto dark:bg-slate-900 rounded-lg px-6 py-8 ring-1 ring-slate-900/5 shadow-xl my-36">
+
+  <div
+    class="grid  gap-2 w-2/3 mx-auto dark:bg-slate-300 rounded-lg px-6 py-8 ring-1 ring-slate-900/5 shadow-xl h-96 overflow-y-scroll  no-scrollbar">
+    <div>
+      <ul>
+        <li *ngFor="let item of received">
+          <p class="text-slate-500 dark:text-slate-800 mt-2 text-sm">
+            [{{item.timestamp}}] - <b>{{item.username}}: </b>{{item.message}}
+          </p>
+        </li>
+      </ul>
+    </div>
+
   </div>
 
-</div>
-<br>
-<br>
-<div>
-  <h1>Chat:</h1>
-  <br>
-  <ul>
-    <li *ngFor="let item of received"><b>{{item.username}}:</b>{{item.message}}</li>
-  </ul>
+
+  <div class="w-2/3 mx-auto text-right">
+    <label class="relative block">
+      <input [(ngModel)]="content"
+        class="placeholder:italic placeholder:text-slate-400 block bg-white w-full border border-slate-300 rounded-md py-2 pl-9 pr-3 shadow-sm focus:outline-none focus:border-sky-500 focus:ring-sky-500 focus:ring-1 sm:text-sm"
+        placeholder="Send a message..." type="text" />
+    </label>
+    <button (click)="sendMsg()"
+      class="px-4 py-2 font-semibold text-sm bg-cyan-500 text-white rounded-full shadow-sm">Send
+      Message</button>
+  </div>
+
 </div>
